[metadata]
name = boto3r
version = 0.0.3
author = Reynaldo Gil
author_email = gilcu2@gmail.com
description = Library that encapsulate Boto3 in option.Result
keywords = boto3, option, functional programming
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gilcu2/boto3-result
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src/main
# packages =
#     src/main
python_requires = >=3.7
install_requires =
    boto3
    option

# [options.packages.find]
# where = src/main